--- a/Carpooling_Frontend/Dockerfile
+++ b/Carpooling_Frontend/Dockerfile
@@ -2,6 +2,16 @@ FROM node:24
 
 WORKDIR app
 
+# Build-time args
+ARG VITE_key_id
+ARG VITE_key_secret
+ARG VITE_API_URL
+
+# Make them available to Vite
+ENV VITE_key_id=$VITE_key_id
+ENV VITE_key_secret=$VITE_key_secret
+ENV VITE_API_URL=$VITE_API_URL
+
 COPY . /app
 
 RUN npm install
